--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -23,10 +23,7 @@ jobs:
         python-version: '3.9'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install wheel
-        pip install -r requirements.txt
+      run: python -m pip install --upgrade pip wheel pyinstaller
 
     - name: Build executable
       run: pyinstaller BROWSANKA.spec
