--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -30,8 +30,9 @@ jobs:
     - name: Build executable
       run: pyinstaller BROWSANKA.spec
 
+    - name: List dist directory
+      run: ls -R dist/
     
-
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
