--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -63,6 +63,9 @@ jobs:
           Copy-Item -Path "settings.json" -Destination "executable_dist/"
           Copy-Item -Path "uttanka.ico" -Destination "executable_dist/"
 
+      - name: Add NSIS to PATH
+        run: echo "C:\Program Files (x86)\NSIS" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
       
 
       - name: Build Windows Installer
