--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -87,6 +87,7 @@ jobs:
 !define APP_URL "https://github.com/marffinn/u-qw-sb"
 !define APP_EXE_NAME "BROWSANKA.exe"
 !define APP_ICON "uttanka.ico"
+!define BUILD_ROOT "executable_dist"
 
 ; The name of the installer file
 OutFile "${APP_NAME}-Setup-${APP_VERSION}.exe"
@@ -103,7 +104,7 @@ Page instfiles
 
 ; Uninstaller
 UninstallText "This will uninstall ${APP_NAME}. Do you wish to continue?"
-UninstallIcon "${APP_ICON}"
+UninstallIcon "${BUILD_ROOT}\${APP_ICON}"
 Section "Uninstall"
   Delete "$INSTDIR\${APP_EXE_NAME}"
   Delete "$INSTDIR\favorites.json"
@@ -120,12 +121,12 @@ SectionEnd
 ; The installer sections
 Section "${APP_NAME} Main Application"
   SetOutPath "$INSTDIR"
-  File "dist\${APP_EXE_NAME}"
-  File "favorites.json"
+  File "${BUILD_ROOT}\${APP_EXE_NAME}"
+  File "${BUILD_ROOT}\favorites.json"
   File "eu-sv.txt"
-  File "servers_cache.json"
-  File "settings.json"
-  File "${APP_ICON}"
+  File "${BUILD_ROOT}\servers_cache.json"
+  File "${BUILD_ROOT}\settings.json"
+  File "${BUILD_ROOT}\${APP_ICON}"
 
   ; Create shortcut in Start Menu
   CreateDirectory "$SMPROGRAMS\${APP_NAME}"
