--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: release/BROWSANKA-Setup.exe
+          files: release/BROWSANKA-Setup-*.exe
           draft: false
           prerelease: false
         env:
